fixed dark mode defaulting to light and switch defaulting to dark

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -70,21 +70,6 @@
   --shadow-xl: 0 20px 40px rgba(0, 0, 0, 0.5);
 }
 
-/* commented out because it breaks dark mode switch
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
-} */
-
 *,
 *::before,
 *::after {
